chore(widgets): move inline field widget to commons-ui
related to CAM-3300

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -294,8 +294,7 @@ a:focus {
 
 
 @import "../scripts/navigation/directives/cam-tasklist-navigation";
-@import "../scripts/widgets/directives/cam-widget-inline-field";
-
+@import "../../node_modules/camunda-commons-ui/lib/widgets/inline-field/cam-widget-inline-field";
 
 
 @import "../scripts/process/modals/cam-tasklist-process-start-modal";
