--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -21,3 +21,6 @@
 @import "directives/variables";
 @import "directives/state-circle";
 @import "directives/view-pills";
+
+@import "../../node_modules/camunda-commons-ui/lib/widgets/inline-field/cam-widget-inline-field";
+@import "../../node_modules/camunda-commons-ui/lib/widgets/search-pill/search-pill";
