refactor(styles): set columns width of processes list
Related to: CAM-3277

--- a/client/client/styles/pages/dashboard.less
+++ b/client/client/styles/pages/dashboard.less
@@ -89,3 +89,15 @@ a.tile {
     width: 25%;
   }
 }
+
+
+table.processes-list {
+  th {
+    &.state {
+      width: 70px;
+    }
+    &.instances {
+      width: 150px;
+    }
+  }
+}
