--- a/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-list.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-list.html
@@ -4,26 +4,27 @@
     <h1>Deployed Processes (List)</h1>
   </div>
 
-  <table class="table table-striped table-hover table-condensed">
+  <table class="table table-striped table-hover table-condensed processes-list">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Running Instances</th>
-        <th>State</th>
+        <th class="state">State</th>
+        <th class="instances">Running Instances</th>
+        <th class="name">Name</th>
       </tr>
     </thead>
     <tbody>
       <tr data-ng-repeat="statistic in statistics | orderBy:orderByPredicate:orderByReverse">
-        <td>
+        <td class="state">
+          <div state-circle
+               incidents="statistic.incidents"></div>
+        </td>
+        <td class="instances">
+          {{ statistic.instances }}
+        </td>
+        <td class="name">
           <a href="#/process-definition/{{ statistic.definition.id }}">
             {{ statistic.definition.name }}
           </a>
-        </td>
-        <td>
-          {{ statistic.instances }}
-        </td>
-        <td>
-          <div state-circle incidents="statistic.incidents"></div>
         </td>
       </tr>
       <tr ng-if="!statistics">
