feat(plugin): add a new plugin point inside navbar
- a new plugin point "tasklist.navbar.action" inside the navbar has added
- "Start process" feature is implemented as plugin which uses the new
  plugin point

related to CAM-3298

--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.less
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.less
@@ -42,5 +42,36 @@
       }
     }
   }
-}
 
+  .nav > li > view > a {
+    position: relative;
+    display: block;
+    padding: @nav-link-padding;
+  }
+
+  .navbar-nav > li > view > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: @line-height-computed;
+  }
+
+  @media (min-width: @grid-float-breakpoint) {
+    .navbar-nav > li > view > a {
+      padding-top: @navbar-padding-vertical;
+      padding-bottom: @navbar-padding-vertical;
+    }
+  }
+
+  .navbar-nav > li > view > a {
+    &:hover,
+    &:focus {
+      color: @navbar-default-link-hover-color;
+      background-color: transparent;
+    }
+  }
+
+  .nav > li > view > a {
+    color: @navbar-default-link-color;
+  }
+
+}
