fix(styles): prevent last processes state to be hidden from footer
Related to: CAM-3378

--- a/client/client/styles/_ctn.less
+++ b/client/client/styles/_ctn.less
@@ -5,9 +5,9 @@
 
 .ctn-main {
   position: absolute;
-  top: 41px;
+  top: @header-height;
+  bottom: @footer-height;
   left: 0;
-  bottom: 0;
   right: 0;
   overflow: auto;
 }
