--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-dialog.html
@@ -1,9 +1,9 @@
-<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/add-varible-dialog.html -->
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-dialog.html -->
 <div class="modal-header">
   <h3>Add Variable to Process Instance</h3>
 </div>
 
-<div class="modal-body">
+<div class="modal-body add-variable-dialog">
   <div notifications-panel></div>
 
   <form class="form-horizontal"
@@ -14,10 +14,10 @@
         request-aware>
     <fieldset>
 
-      <div class="form-group">
-        <label class="control-label"
+      <div class="form-group variable-name">
+        <label class="control-label col-xs-4"
                for="variableName">Variable Name*</label>
-        <div class="controls">
+        <div class="col-xs-8">
           <input id="variableNameId"
                  name="variableName"
                  class="form-control"
@@ -28,10 +28,10 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <label class="control-label"
+      <div class="form-group variable-type">
+        <label class="control-label col-xs-4"
                for="variableType">Variable Type*</label>
-        <div class="controls">
+        <div class="col-xs-8">
           <select id="variableTypeId"
                   name="variableType"
                   class="form-control"
@@ -42,10 +42,10 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <label class="control-label"
+      <div class="form-group variable-value">
+        <label class="control-label col-xs-4"
                for="variableValue">Variable Value*</label>
-        <div class="controls">
+        <div class="col-xs-8">
           <div variable="newVariable"></div>
 
           <p class="invalid"
@@ -89,4 +89,4 @@
           ng-click="close()"
           ng-show="status === 'SUCCESS' || status === 'FAIL'">OK</button>
 </div>
-<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/add-varible-dialog.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-dialog.html -->
