--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-action.html
@@ -1,5 +1,7 @@
 <!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-action.html -->
-<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar"
+   href
+   ng-click="openDialog()"
    tooltip="Increment Number of Retries of Failed Jobs"
    tooltip-placement="left">
   <i class="glyphicon glyphicon-repeat"></i>
