--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html
@@ -1,11 +1,15 @@
 <!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html -->
-<a class="btn btn-default btn-toolbar btn-suspend-action" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar btn-suspend-action"
+   href
+   ng-click="openDialog()"
    tooltip="Suspend Process Instance"
    tooltip-placement="left"
    ng-show="!processInstance.suspended">
   <i class="glyphicon glyphicon-pause"></i>
 </a>
-<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar"
+   href
+   ng-click="openDialog()"
    tooltip="Activate Process Instance"
    tooltip-placement="left"
    ng-hide="!processInstance.suspended">
