--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-dialog.html
@@ -4,7 +4,7 @@
   <h3 ng-hide="processInstance.suspended">Suspend Process Instance</h3>
 </div>
 
-<div class="modal-body">
+<div class="modal-body update-suspension-state-dialog">
   <div notifications-panel></div>
 
   <div ng-hide="status === 'SUCCESS' || status === 'FAIL'">
@@ -80,11 +80,14 @@
 
 </div>
 <div class="modal-footer">
-  <button class="btn" ng-click="close(status)"
+  <button class="btn"
+          ng-click="close(status)"
           ng-disabled="status === 'PERFORM_UDPATE'"
           ng-hide="status === 'SUCCESS' || status === 'FAIL'">Close</button>
 
-  <button type="submit" class="btn btn-primary" ng-click="updateSuspensionState()"
+  <button type="submit"
+          class="btn btn-primary"
+          ng-click="updateSuspensionState()"
           ng-hide="status === 'SUCCESS' || status === 'FAIL'"
           ng-disabled="status === 'PERFORM_UDPATE'">
     <span ng-hide="processInstance.suspended">Suspend</span>
@@ -92,7 +95,8 @@
     <span></span>
   </button>
 
-  <button class="btn btn-primary" ng-click="close(status)"
+  <button class="btn btn-primary"
+          ng-click="close(status)"
           ng-show="status === 'SUCCESS' || status === 'FAIL'">OK</button>
 </div>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-dialog.html -->
