fix(styles): correct styles of new authorization form
Related to CAM-3370

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -7,42 +7,21 @@
 @import "./../node_modules/camunda-commons-ui/resources/less/directives/pagination";
 
 
-.box {
-  padding: 19px;
-  position: relative;
-  background-color: @body-bg;
-  border: 1px solid #ddd;
-  border-radius: @border-radius-base;
-  margin-bottom: 20px;
-}
+// .box {
+//   padding: 19px;
+//   position: relative;
+//   background-color: @body-bg;
+//   border: 1px solid #ddd;
+//   border-radius: @border-radius-base;
+//   margin-bottom: 20px;
+// }
 
-.controls .help-inline {
-  color: @important-color;
-}
-
-td .select-auth-type {
-  width:95px;
-}
-
-.input-auth-name {
-  width: 140px;
-}
-
-div.auth-box {
-  min-width: 720px;
-}
-
-a.select-identity-type {
-  width: 50px;
-}
-
-span.permissions-editor {
-  color: rgb(85, 85, 85);
-  cursor: auto;
-  background-color: @body-bg;
-}
+// .controls .help-inline {
+//   color: @important-color;
+// }
 
 .monospaced {
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
 
+@import "pages/authorizations";
