impr(styles): correct some glitches from bootstrap upgrade

--- a/client/client/styles/_ctn.less
+++ b/client/client/styles/_ctn.less
@@ -29,7 +29,7 @@
   position: absolute;
   top: 30px;
   left: 0;
-  bottom: 27px;
+  bottom: 0;
   right: 0;
   overflow: visible;
 }
@@ -149,7 +149,6 @@
 // overrides `.ctn-content-bottom`
 div.ctn-content-bottom {
   right: 1px;
-  bottom: 4px;
 }
 
 .ctn-toolbar {
