--- a/client/client/styles/directives/activity-instance-tree.less
+++ b/client/client/styles/directives/activity-instance-tree.less
@@ -134,7 +134,6 @@
 }
 
 .quick-filters,
-.state-filter,
 .version-filter {
   .name {
     font-weight: bolder;
@@ -143,13 +142,6 @@
 
 .quick-filters,
 .state-filter {
-  .btn {
-    input,
-    i {
-      vertical-align: sub;
-    }
-  }
-
   .quick-filter {
     min-height: 40px;
     position: relative;
@@ -201,4 +193,9 @@
       padding: 2px 5px;
     }
   }
+}
+
+.state-filter > .name {
+  font-weight: bolder;
+  display: inline-block;
 }
