feat(touch icons): add touch icons and review index html
This commit also removes some unused files (since bootstrap upgrade).

Related to: CAM-3327

--- a/client/client/styles/_vars.less
+++ b/client/client/styles/_vars.less
@@ -12,4 +12,4 @@
 @state-ok-color: #468847;
 @state-error-color: #b94a48;
 
-@brand-logo:  '../assets/images/cockpit/app-logo.png';
+@brand-logo:  '../assets/images/app-logo.png';
