impr(styles): set the width of state (table) columns
Related to: CAM-3377

--- a/client/client/styles/pages/dashboard.less
+++ b/client/client/styles/pages/dashboard.less
@@ -91,11 +91,16 @@ a.tile {
 }
 
 
-table.processes-list {
+table {
   th {
     &.state {
       width: 70px;
     }
+  }
+}
+
+table.processes-list {
+  th {
     &.instances {
       width: 150px;
     }
