impr(styles): ensure ctn-wrapper correct dimensions

--- a/client/client/styles/_ctn.less
+++ b/client/client/styles/_ctn.less
@@ -17,6 +17,14 @@
   height: auto !important;
   height: 100%;
   margin: 0 auto -64px;
+
+  margin: 0;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .ctn-view {
