impr(dashboard): add new styles for the dashboard list and previews
Related to CAM-3407

--- a/client/client/styles/_vars.less
+++ b/client/client/styles/_vars.less
@@ -11,5 +11,6 @@
 
 @state-ok-color: #468847;
 @state-error-color: #b94a48;
+@state-circle-size: 16px;
 
 @brand-logo:  '../assets/images/app-logo.png';
