--- a/client/client/styles/directives/state-circle.less
+++ b/client/client/styles/directives/state-circle.less
@@ -1,8 +1,8 @@
 [state-circle] {
   display: block;
-  width: (@grid-gutter-width / 2);
-  height: (@grid-gutter-width / 2);
-  border-radius: @grid-gutter-width;
+  width: @state-circle-size;
+  height: @state-circle-size;
+  border-radius: @state-circle-size;
   &.circle-red {
     background-color: @state-error-color;
   }
